--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@
 
 @layer base {
   body {
-    @apply relative text-base font-normal z-1 bg-gray-50 font-outfit;
+    @apply relative text-base font-normal z-1 bg-gray-50 font-outfit overflow-x-hidden;
+  }
+  html {
+    @apply overflow-x-hidden;
+  }
+  #root {
+    @apply overflow-x-hidden;
   }
 }
 
